freest/test/prog/Valid/Functional/Collect/Collect.fst
module Collect where

collect : Int -> Int
collect x = x

main : ()
main = print (collect 2)
