freest/test/prog/Invalid/Typing/MultiVarTypeSigAmbig/MultiVarTypeSigAmbig.fst
module MultiVarTypeSigAmbig where

x, y, x : Int 
x = 1
y = 2
